--- a/src/content/posts/core-d20/acrobat-rogue-archetype.mdx
+++ b/src/content/posts/core-d20/acrobat-rogue-archetype.mdx
@@ -3,10 +3,9 @@ title: Акробат, архетип Плута
 description: Ловкий плут с посохом, владеющий дополнительными приемами
 date: '2023-07-16'
 tags:
-  - акробат
-  - плут
-  - архетип
-  - подкласс
+  - Акробат
+  - Плут
+  - Архетип
   - Core d20 RPG
 ---
 
