--- a/src/content/posts/core-d20/archetype-fighter-myrmidon.mdx
+++ b/src/content/posts/core-d20/archetype-fighter-myrmidon.mdx
@@ -3,10 +3,9 @@ title: Мирмидон, архетип Бойца
 description: Простой архетип бойца с большим атакующим потенциалом
 date: '2023-07-16'
 tags:
-  - мирмидон
-  - боец
-  - архетип
-  - подкласс
+  - Мирмидон
+  - Боец
+  - Архетип
   - Core d20 RPG
 ---
 
