--- a/src/content/posts/core-d20/archetype-wizard-necromancer.mdx
+++ b/src/content/posts/core-d20/archetype-wizard-necromancer.mdx
@@ -3,9 +3,9 @@ title: Некромант, традиция волшебника
 description: Измененная традиция волшебника
 date: '2023-07-17'
 tags:
-  - некромант
-  - волшебник
-  - архетип
+  - Некромант
+  - Волшебник
+  - Архетип
   - Core d20 RPG
 ---
 
