--- a/src/content/posts/core-d20/aristocrat-background.mdx
+++ b/src/content/posts/core-d20/aristocrat-background.mdx
@@ -3,11 +3,13 @@ title: Предыстория - Аристократ
 description: Описание предыстории Аристократ для персонажей D&D 5e
 date: '2023-08-17'
 tags:
-  - предыстория
-  - background
+  - Предыстория
+  - Background
+  - Core d20 RPG
 ---
 
-АРИСТОКРАТ [Предыстория]
+№№АРИСТОКРАТ [Предыстория]
+
 Всю свою жизнь вы, из своего дома на высоком холме, смотрели вниз на немытую толпу (иногда образно, а иногда и буквально). Ваши, отороченные мехами, одежды и занятия изящными искусствами означают, что вы богаты, скорее всего, от рождения, вы член аристократии, правящего класса. Ни один из ваших родственников не заседает в Городском совете, не является Лордом или Леди …. пока. Вы один из элиты вашего родного города, и неважно, жаждите ли вы более высокого положения, или нет, вы лично вхожи в клубы, где аристократия собирается для замыслов, интриг, бизнеса, и обсуждения искусства, и что самое главное, вы видите и будете видеть всё это.
 
 **Владение навыками:** Обман, Выступление
