--- a/src/content/posts/core-d20/captain-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/captain-fighter-archetype.mdx
@@ -4,8 +4,8 @@ description: Архетип бойца, направленный на предо
 date: '2023-07-15'
 tags:
   - Капитан
-  - боец
-  - архетип
+  - Боец
+  - Архетип
   - Core d20 RPG
 ---
 
