--- a/src/content/posts/core-d20/chaplain-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/chaplain-fighter-archetype.mdx
@@ -4,8 +4,8 @@ description: Перевод архетипа бойца - Капеллан, ко
 date: '2023-07-15'
 tags:
   - Капеллан
-  - архетип
-  - боец
+  - Архетип
+  - Боец
   - Core d20 RPG
 ---
 
