--- a/src/content/posts/core-d20/duelist-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/duelist-fighter-archetype.mdx
@@ -3,9 +3,9 @@ title: Дуэлист, архетип бойца
 description: Описание архетипа бойца - дуэлист.
 date: '2023-08-08'
 tags:
-  - боец
-  - архетип
-  - подкласс
+  - Боец
+  - Архетип
+  - Дуэлист
   - Core d20 RPG
 ---
 
