--- a/src/content/posts/core-d20/eldritch-archer-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/eldritch-archer-fighter-archetype.mdx
@@ -3,10 +3,9 @@ title: Лучник заклинатель, архетип бойца
 description: Заклинатель боец с упором на лук
 date: '2021-05-29'
 tags:
-  - боец
-  - архетип
-  - заклинатель
-  - лучник заклинатель
+  - Боец
+  - Архетип
+  - Дучник заклинатель
   - Core d20 RPG
 ---
 
