--- a/src/content/posts/core-d20/eldritch-knight-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/eldritch-knight-fighter-archetype.mdx
@@ -3,10 +3,9 @@ title: Рыцарь заклинатель, архетип бойца
 description: Заклинатель боец
 date: '2021-05-29'
 tags:
-  - боец
-  - архетип
-  - заклинатель
-  - рыцарь заклинатель
+  - Боец
+  - Архетип
+  - Рыцарь заклинатель
   - Core d20 RPG
 ---
 
