--- a/src/content/posts/core-d20/hospitaler-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/hospitaler-fighter-archetype.mdx
@@ -3,9 +3,9 @@ title: Госпитальер, архетип бойца
 description: Архетип бойца с заклинаниями клерика, который специализируется на лечении
 date: '2023-07-15'
 tags:
-  - архетип
-  - госпитальер
-  - боец
+  - Архетип
+  - Госпитальер
+  - Боец
   - Core d20 RPG
 ---
 
