--- a/src/content/posts/core-d20/spellsword-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/spellsword-fighter-archetype.mdx
@@ -3,10 +3,9 @@ title: Чаромеч, архетип Бойца
 description: Чаромей - архетип бойца, который не использует ячейки заклинаний
 date: '2023-07-16'
 tags:
-  - чаромеч
-  - архетип
-  - боец
-  - подкласс
+  - Чаромеч
+  - Архетип
+  - Боец
   - Core d20 RPG
 ---
 
