--- a/src/content/posts/core-d20/sword-dancer-archetype.mdx
+++ b/src/content/posts/core-d20/sword-dancer-archetype.mdx
@@ -3,12 +3,12 @@ title: Танцующий с мечом, архетип бойца
 description: Описание архетипа бойца из книги Kobold press
 date: '2023-07-08'
 tags:
-  - боец
-  - архетип
-  - подкласс
+  - Боец
+  - Архетип
   - Kobold Press
   - Midgard Heroes Handbook
   - Core d20 RPG
+  - Танцующий с мечом
 author: Kobold Press
 ---
 
