--- a/src/content/posts/core-d20/tactician-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/tactician-fighter-archetype.mdx
@@ -3,9 +3,9 @@ title: Тактик, архетип бойца
 description: Тактик, архетип бойца, направленный на оказание помощи союзникам на поле боя.
 date: '2023-08-08'
 tags:
-  - боец
-  - архетип
-  - подкласс
+  - Боец
+  - Архетип
+  - Тактик
   - Paradigm Concepts
   - Arcanis
   - Core d20 RPG
