--- a/src/content/posts/core-d20/archetypes-index.mdx
+++ b/src/content/posts/core-d20/archetypes-index.mdx
@@ -36,9 +36,17 @@ tags:
 
 [Баннерет](https://cyborgsandmages.com/posts/core-d20/banneret-archetype)
 
-Тактик
+[Тактик](https://cyborgsandmages.com/posts/core-d20/tactician-fighter-archetype/)
 
 Стрелок
+
+[Танцующий с мечом](https://cyborgsandmages.com/posts/core-d20/sword-dancer-archetype/)
+
+[Дуэлист](https://cyborgsandmages.com/posts/core-d20/duelist-fighter-archetype/)
+
+[Лучник заклинатель](https://cyborgsandmages.com/posts/core-d20/eldritch-archer-fighter-archetype/)
+
+[Рыцарь заклинатель](https://cyborgsandmages.com/posts/core-d20/eldritch-knight-fighter-archetype/)
 
 ## Клерик
 
@@ -80,7 +88,7 @@ tags:
 
 ## Волшебник
 
-Некромант
+[Некромант](https://cyborgsandmages.com/posts/core-d20/archetype-wizard-necromancer/)
 
 Общий маг
 
