--- a/src/content/posts/core-d20/banneret-archetype.mdx
+++ b/src/content/posts/core-d20/banneret-archetype.mdx
@@ -3,10 +3,9 @@ title: Баннерет
 description: Измененный архетип баннерета
 date: '2023-07-08'
 tags:
-  - архетип
-  - боец
-  - подкласс
-  - баннерет
+  - Архетип
+  - Боец
+  - Баннерет
   - Core d20 RPG
 ---
 
