--- a/src/content/posts/core-d20/archetypes-index.mdx
+++ b/src/content/posts/core-d20/archetypes-index.mdx
@@ -16,11 +16,19 @@ tags:
 
 Скальд
 
+Вархалк
+
+Погибель заклинателей
+
+Военный Вождь
+
 ## Бард
 
 Коллегия Знаний
 
 Коллегия Доблести
+
+Коллегия Клинка
 
 ## Боец
 
@@ -54,11 +62,17 @@ tags:
 
 Домен Магии
 
+Домен Жизни
+
+Домен Знаний
+
 ## Друид
 
 Круг Зверей
 
 Круг Земли
+
+Круг Оборотней
 
 ## Монах
 
@@ -68,13 +82,15 @@ tags:
 
 Путь четырех стихий
 
-Кенсей
+Путь Кенсея
 
 ## Рейнджер
 
 Охотник
 
 Мастер зверей
+
+Сталкер
 
 ## Паладин
 
@@ -86,6 +102,11 @@ tags:
 
 [Менестрель](https://cyborgsandmages.com/posts/articles/rogue-archetype-minstrel)
 
+Вор
+
+Рубака
+
+
 ## Волшебник
 
 [Некромант](https://cyborgsandmages.com/posts/core-d20/archetype-wizard-necromancer/)
@@ -96,8 +117,26 @@ tags:
 
 [Арканический рыцарь](https://cyborgsandmages.com/posts/core-d20/arcane-knight-wizard-archetype)
 
+Маг специалист
+
 ## Колдун
+
+Исчадие
+
+Архифея
+
+Небожитель 
 
 ## Чародей
 
 Боевой чародей
+
+Стихийный Чародей
+
+Драконический Чародей
+
+Божественная душа
+
+---
+
+Индекс престижных классов
