--- a/src/content/posts/translations/alexandrian-roleplaying-games-vs-storytelling.mdx
+++ b/src/content/posts/translations/alexandrian-roleplaying-games-vs-storytelling.mdx
@@ -113,3 +113,8 @@ Dread, книга правил
 Сравните это с видеоиграми, например. Grand Theft Auto началась как игра с преследованием в лабиринте. Когда они развивали этот дизайн, никто не начал святую войну, утверждая, что это Единственно Верный Способ создания игр с преследованием в лабиринте. Они сказали: "О, смотри. Это крутой новый тип игры". Вместо того, чтобы тратить двадцать лет на споры о том, что Grand Theft Auto 3 - это игра с преследованием в лабиринте, как Pac-Man (и как ты смеешь утверждать иное?!), они определили новую форму как игру в открытом мире и провели двадцать лет, создавая множество игр в открытом мире (которые никоим образом не пытались быть Pac-Man).
 
 Видеоигры и настольные игры делают это постоянно. И мы имеем более хорошие и более разнообразные видеоигры и настольные игры как результат. Не было бы это замечательно, если бы настольные настольные сюжетные игры могли бы получить те же преимущества?
+
+---
+Также вам может быть интересно посмотреть на полный [Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+Вы найдете там немало полезной информации.
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
