--- a/src/content/posts/articles/kodeks-povedeniya-v-lige-avantyuristov.mdx
+++ b/src/content/posts/articles/kodeks-povedeniya-v-lige-avantyuristov.mdx
@@ -6,9 +6,9 @@ tags:
 - Лига Авантюристов
 ---
 
-### ![20160114_OP_thumb](images/20160114_op_thumb.jpg)
+![20160114_OP_thumb](images/20160114_op_thumb.jpg)
 
-<!--more-->
+
 
 ### УКАЗАННЫЙ КОДЕКС ПОВЕДЕНИЯ ОБЯЗАТЕЛЕН ДЛЯ ВСЕХ ИГРОКОВ
 
