--- a/src/content/posts/forgotten-realms/flan.mdx
+++ b/src/content/posts/forgotten-realms/flan.mdx
@@ -6,7 +6,7 @@ tags:
   - "homebrew"
 ---
 
-# ![Phlan1479.png](images/phlan1479.png)
+![](/images/phlan1479.png)
 
 Темы: Коррупция, Военное положение Население: 18 000 (плюс 2000 на окрестных фермах и хуторах)
 
