--- a/src/content/posts/adventurers-league/kodeks-povedeniya-v-lige-avantyuristov.mdx
+++ b/src/content/posts/adventurers-league/kodeks-povedeniya-v-lige-avantyuristov.mdx
@@ -10,7 +10,19 @@ tags:
 
 > Включайся в игру, веселись и будь в безопасности!
 
-Все участники Приключенческой лиги D&D, собираются вместе чтобы получить удовольствие от игры и должны ВСЕГДА чувствовать в процессе, чувствуя себя в безопасности. Ожидается, что все участники (игроки, Мастера Подземелий и организаторы) придерживаются следующего Кодекса поведения. Участники должны вести себя так, чтобы получить удовольствие от игры самим, при этом не угрожая безопагасности других участников мероприятия. ► Избегайте чрезмерно вульгарного, сексуального или ненормативной лексики и тем. ►Следуйте указаниям Мастер, избегайте споров с Мастером или другими игроками по поводу правил. ►Не перебивайте других игроков во время их монолога или диалога. ►Избегайте перекрестных спойлеров, которые не имеют отношения к данной игре. ►Не акцентируйте внимание Мастера только на себе, позвольте и другим игрокам общаться с Мастером. ►Не позволяйте другим использовать социальные сети для хулиганства, опозоривания или запугивания других участников. ►Избегайте телефонных разговоров за столом. Если вы должны позвонить, пожалуйста, извинитесь и выйдите из-за стола, пока ваш звонок не будет завершен. ►Не будьте толерантны к краже или агрессивному поведению. Кража и агрессивное поведение являются основанием для немедленного удаления из игры и помещения.
+Все участники Приключенческой лиги D&D, собираются вместе чтобы получить удовольствие от игры и должны ВСЕГДА чувствовать в процессе, чувствуя себя в безопасности. Ожидается, что все участники (игроки, Мастера Подземелий и организаторы) придерживаются следующего Кодекса поведения. Участники должны вести себя так, чтобы получить удовольствие от игры самим, при этом не угрожая безопагасности других участников мероприятия. 
+
+► Избегайте чрезмерно вульгарного, сексуального или ненормативной лексики и тем. ►Следуйте указаниям Мастер, избегайте споров с Мастером или другими игроками по поводу правил. 
+
+►Не перебивайте других игроков во время их монолога или диалога. ►Избегайте перекрестных спойлеров, которые не имеют отношения к данной игре. 
+
+►Не акцентируйте внимание Мастера только на себе, позвольте и другим игрокам общаться с Мастером. 
+
+►Не позволяйте другим использовать социальные сети для хулиганства, опозоривания или запугивания других участников. 
+
+►Избегайте телефонных разговоров за столом. Если вы должны позвонить, пожалуйста, извинитесь и выйдите из-за стола, пока ваш звонок не будет завершен. 
+
+►Не будьте толерантны к краже или агрессивному поведению. Кража и агрессивное поведение являются основанием для немедленного удаления из игры и помещения.
 
 > Агрессивное поведение включает в себя: \*\*угрозы\*\* или фактическую физическую агрессию, использование расовых, гендерных или культурных \*\*оскорблений\*\* в других участников.
 
