--- a/src/content/posts/translations/acoup-archery-distance-and-kiting.mdx
+++ b/src/content/posts/translations/acoup-archery-distance-and-kiting.mdx
@@ -26,6 +26,7 @@ author: Bret Devereaux
 
 ![](/images/archery-distance-and-kiting-1.jpg)
 Некоторые лучники, а также Чжэн Цзян, которая была сама себе на голову круче.
+
 Вместо этого я хочу сосредоточиться на том, как оружие дальнего боя - особенно стрелы - обрабатывается в подобных системах. Возьмем пример игр серии Total War - в данном случае Total War: Three Kingdoms (потому что я в нее много играл).
 
 Базовые лучники имеют радиус действия 200 и урон от стрел 53 (31 обычный и 22 колющих урона). В игре это означает, что эти парни могут стрелять только по врагам, находящимся на расстоянии 200 единиц (я думаю, это в метрах, но сказать сложно). Когда каждая модель (каждый парень) стреляет, игра рассчитывает траекторию для его стрелы - если она перехватывает другую модель (друга или врага), она наносит указанные 53 единицы урона. Неважно, находится ли цель на расстоянии 199 метров или 2 метров - она наносит 53 урона.
@@ -67,7 +68,7 @@ author: Bret Devereaux
 Мы можем представить это в виде диаграммы энергий, необходимых для того, чтобы иметь шанс разрушить доспех. Обратите внимание, что для того, чтобы действительно убить человека, удар должен значительно превысить эти энергии, возможно, на 10-30 Дж.
 
 ![](/images/archery-distance-and-kiting-3.jpg)
-Сине-красные полосы представляют собой энергетические зоны, где пробитие возможно, но не гарантировано (в зависимости от качества доспехов и т. д.). Оговорки: Это следует из Williams (2003). Здесь "железо" соответствует *-доспехам Уильямса (2003) (0% углерода, 3-4% шлака); "сталь" - его ***-доспехам (0,6% углерода, <1% шлака). Помните, что доспех состоит из слоев - почта надевается поверх гамбезона, а не сама по себе (обычно)!
+Сине-красные полосы представляют собой энергетические зоны, где пробитие возможно, но не гарантировано (в зависимости от качества доспехов и т. д.). Оговорки: Это следует из Williams (2003). Здесь "железо" соответствует *-доспехам Уильямса (2003) (0% углерода, 3-4% шлака); "сталь" - его ***-доспехам (0,6% углерода,меньше 1% шлака). Помните, что доспех состоит из слоев - почта надевается поверх гамбезона, а не сама по себе (обычно)!
 
 Оценки энергии выстрела самых мощных луков значительно отличаются. Большинство известных мне исследований было проведено на примере английских длинных луков, но я хочу отметить, что вес и длина тяги степных композитных луков (т.е. луков гуннов, тюрков, монголов) довольно схожи, что дает им схожие (как я понимаю) характеристики дальности и мощности. Многие луки не были настолько мощными - это одни из самых мощных луков. Некоторые оценки я приведу здесь в кавычках, чтобы те, кто не хочет останавливаться на них, могли их пропустить.
 
