--- a/src/content/posts/forgotten-realms/flan.mdx
+++ b/src/content/posts/forgotten-realms/flan.mdx
@@ -1,9 +1,13 @@
 ---
-title: "ФЛАН"
-description: "ФЛАН"
+title: "Флан"
+description: "Флан"
 date: "2018-03-13"
 tags: 
-  - "homebrew"
+  - Лига Авантюристов
+  - Флан
+  - 1 сезон
+  - Лунное Море
+  - Забытые Королевства
 ---
 
 ![](/images/phlan1479.png)
@@ -109,9 +113,17 @@ Valhingen Graveyard
 
 Welltran Crypt
 
-### Материал для вдохновения
+---
 
 [Скачать Руководство по Флану из старых редакций из каталога Traveler's Book с сайта Candlekeep.com](https://cyborgsandmages.com/wp-content/uploads/2018/07/phlancore.pdf "PhlanCore")
+
+---
+
+![Карта Флана](/images/phlan-map-2.jpg)
+
+![Карта Флана](/images/phlan-map-3.png)
+
+![Карта Флана](/images/phlan-map-4.webp)
 
 ---
 
@@ -120,5 +132,3 @@ Welltran Crypt
 [Phlan on Forgotten Realms Wiki](https://forgottenrealms.wikia.com/wiki/Phlan) 
 
 [Phlan on Aerie Wiki](http://wiki.aerie.ru/wiki/Флан)
-
----
