--- a/src/content/posts/forgotten-realms/flan-i-ego-okrestnosti.mdx
+++ b/src/content/posts/forgotten-realms/flan-i-ego-okrestnosti.mdx
@@ -1,9 +1,13 @@
 ---
-title: "ФЛАН И ЕГО ОКРЕСТНОСТИ"
-description: "ФЛАН И ЕГО ОКРЕСТНОСТИ"
+title: "Флан и его окрестности"
+description: "Флан и его окрестности"
 date: "2018-03-13"
 tags: 
-  - "homebrew"
+  - Лига Авантюристов
+  - Флан
+  - 1 сезон
+  - Лунное Море
+  - Забытые Королевства
 ---
 
 ## ПРИМЕЧАТЕЛЬНЫЕ МЕСТА ФЛАНА
@@ -66,13 +70,22 @@ tags:
 
 Этот небольшой остров на реке Стоянов, невзрачное пристанище для большой серебряной пирамиды, 120 футов высотой и 90 футов шириной стороны по основанию. Эта таинственная конструкция была домом для безумного волшебника Яраша Яраш проводил эксперименты над местной флорой и фауной превращая их в ужасных существ. Перемещение в, внутри и наружу пирамиды происходит при помощи магической телепортации. По слухам, внутри пирамиды, находятся чудовищные существа, магические ловушки, и сокровища перешагивающие грани воображения. Однако, никто из пошедших за ними, не вернулся. В настоящее время пирамида занята племенем мутантов ящеролюдов, потомков нескольких жертв экспериментов Яраша.
 
+---
+
+[Скачать Руководство по Флану из старых редакций из каталога Traveler's Book с сайта Candlekeep.com](https://cyborgsandmages.com/wp-content/uploads/2018/07/phlancore.pdf "PhlanCore")
+
+---
+
+![Карта Флана](/images/phlan-map-2.jpg)
+
+![Карта Флана](/images/phlan-map-3.png)
+
+![Карта Флана](/images/phlan-map-4.webp)
+
+---
 
 [Phlan on Adventurers League Wiki](https://adventurersleague.wikia.com/wiki/Phlan) 
 
 [Phlan on Forgotten Realms Wiki](https://forgottenrealms.wikia.com/wiki/Phlan) 
 
 [Phlan on Aerie Wiki](http://wiki.aerie.ru/wiki/Флан)
-
-### Материал для вдохновения
-
-[Скачать Руководство по Флану из старых редакций из каталога Traveler's Book с сайта Candlekeep.com](https://cyborgsandmages.com/wp-content/uploads/2018/07/phlancore.pdf "PhlanCore")
