--- a/src/content/posts/translations/art-of-war-making-plans.mdx
+++ b/src/content/posts/translations/art-of-war-making-plans.mdx
@@ -65,7 +65,7 @@ translator: Featona
 Слухи. Вероятно, в городе будут распространены слухи о ближайших подземельях. Стоит потратить время на то, чтобы узнать эти слухи. Даже если половина из них будут ложными, остальные дадут вам представление о том, с чем вы столкнетесь. Таверны и трактиры являются отличными источниками слухов, но вам также стоит посетить местные рынки и храмы. В некоторых городах есть приключенческие гильдии, в которых, вероятно,
 собрано множество полезных слухов.
 
-## Контакты.
+## Контакты
 
 Если вы провели уже много времени в поселении, вы, вероятно, обзавелись контактами среди местных жителей, и они часто бывают очень хорошим источником информации. Некоторые предыстории (например, преступник) имеют особенности, которые обеспечивают вас готовыми контактами. Вы также можете создать новые контакты, используя время простоя (см. «Руководство Занатара обо всем»).
 
@@ -74,7 +74,7 @@ translator: Featona
 В большинстве городов есть несколько библиотек. Они могут быть государственными, частными или
 принадлежать учреждениям, таким как храмы. Получение доступа к библиотеке может потребовать оплаты, но затраты того стоят. Опубликованные истории, мемуары и личные письма являются потенциальными источниками информации.
 
-## Прорицание.
+## Прорицание
 
 Заклинания прорицания, такие как Предсказание и Связь с иным миром, могут раскрыть конкретные детали предстоящего приключения. Если вы не
 можете использовать эти заклинания самостоятельно, местный священнослужитель может сделать это в обмен на соответствующее пожертвование. Еще раз, вы не должны скупиться на такие расходы, поскольку это может спасти вашу жизнь.
@@ -153,24 +153,25 @@ translator: Featona
 Но в случае успеха они дают вам огромное тактическое преимущество перед врагом,
 поэтому все же стоит попробовать.
 
-Разделяйте врагов
+## Разделяйте врагов ##
+
 В единстве сила, и это касается как ваших врагов, так и вас самих. Во
 многих случаях группа монстров более чем соответствует вашей группе по силе,
 хотя каждый отдельный монстр относительно слаб. В таком случае, хорошая тактика
 — отделить врага, оттянуть его, чтобы вы могли сражаться с ним индивидуально
 или небольшими группами. Есть несколько способов достижения этого:
 
-Еда. Если вы сражаетесь с большой группой зверей, вы можете использовать пищу для их разделения.
+**Еда.** Если вы сражаетесь с большой группой зверей, вы можете использовать пищу для их разделения.
 Например, свежая свинья, брошенная рядом с стаей волков, заставит хотя бы нескольких из них отделиться от стаи.
 
-Сокровища. Тот же самый эффект
+**Сокровища.** Тот же самый эффект
 может быть достигнут с немного более разумными монстрами при использовании сокровищ. Возможно, по коридорам бродит большая группа гоблинов. След из золотых монет может легко расколоть группу или привести ее в замешательство.
 
-Отвлечение. Если монстры
+**Отвлечение.** Если монстры
 находятся в фиксированном месте, вы можете попробовать вытянуть их оттуда, используя неожиданный звук. Например, большая группа насекомых сидит в пещере.
 Громкий звонок в колокол или звук рога может привести к тому, что небольшое количество существ покинет пещеру и отправится на разведку.
 
-Провокация. Могущественные существа часто имеют огромное эго и чувствительны к насмешкам. Если вы войдете в тронный зал короля Снурре и оскорбите его, прежде чем убежать, он, скорее всего, пошлет за вами своих адских гончих. Это может быть очень эффективным способом вывести вражеские силы из хорошо укрепленного места.
+**Провокация.** Могущественные существа часто имеют огромное эго и чувствительны к насмешкам. Если вы войдете в тронный зал короля Снурре и оскорбите его, прежде чем убежать, он, скорее всего, пошлет за вами своих адских гончих. Это может быть очень эффективным способом вывести вражеские силы из хорошо укрепленного места.
 
 ---
 
