--- a/src/content/posts/sage-advice/glasswall-cover.mdx
+++ b/src/content/posts/sage-advice/glasswall-cover.mdx
@@ -153,7 +153,7 @@ First, determine whether the attack roll would have hit the protected target wit
 >
 > Обратите внимание, что если стеклянная стена сделана из толстого бронированного стекла - то она уже будет препятствием, хотя все еще не дас "сокрытия" (сильно заслоненной местности).
 >
-> ### УТОЧНЕНИЕ 2. Дыхание драконв и прочие эффекты
+> ### УТОЧНЕНИЕ 2. Дыхание драконов и прочие эффекты
 >
 > Формулировка полного укрытия, говорит о том, что существо не может быть целью атаки или заклинания, хотя может попасть под эффект заклинания если существо попадает в область воздействия заклинания.
 >
