--- a/src/content/posts/articles/about-armor-1.mdx
+++ b/src/content/posts/articles/about-armor-1.mdx
@@ -9,9 +9,9 @@ tags:
 author: Лекса «ВЫдр»
 ---
 
-«Он сделал сальто через закованного в броню стражника. И пока тот, стесненный неудобным панцирем, пытался развернуться, лезвие кинжала уже распороло нежную плоть его шеи как раз между шлемом и кирассой…»
+_«Он сделал сальто через закованного в броню стражника. И пока тот, стесненный неудобным панцирем, пытался развернуться, лезвие кинжала уже распороло нежную плоть его шеи как раз между шлемом и кирасой…»_
 
-(Из форумной игры)
+**(Из форумной игры)**
 
 Ничего не смущает вас в этом описании? Не знаю как вас, а меня даже очень. Может в игре про супергероев подобное — обыденность, но многие мастера стараются водить более реалистично.
 
@@ -20,25 +20,25 @@ author: Лекса «ВЫдр»
 ## Итак, «Неудобный доспех».
 
 О да! Это самая большая головная боль и главный камень преткновения между игроками и мастерами. Действительно, всем игрокам хочется иметь бонусы от «всего», лишь бы только не попортить шкурку себе любимому. А всем мастерам хочется иметь в игре хороший баланс сил, чтобы не пришлось выпускать на «неуязвимого» игрока стаю дракончиков или батальон огров, чтобы поддержать накал и опасность. Именно поэтому во все правила по фехтованию была как под копирку введена некая шкала: либо ты ловкий но уязвимый, либо ты бронированный, но имеешь штрафы к ловкости.
-
-## Что же такое эти пресловутые «штрафы к ловкости»?
-
+Что же такое эти пресловутые «штрафы к ловкости»?
 Как по мне — сущая че-пу-ха. Причем чепуха «двусторонняя», так что погодите кидать в меня свои сухпайки.
 
 Во-первых — в жизни все доспехи стремятся сделать такими, чтобы они не сильно мешали боевому взаимодействию. Поэтому для основных боевых движений они удобны вполне. Наплечник и правда не даст поднять руку в сторону, но замахнуться и ударить вперед вы сможете.
+Действительно,
+ сцепившиеся детали лат, или застрявший в кольчуге шип на наруче могут стоить жизни. Именно поэтому латы делают очень тщательно (и дорого), а шипов и прочей дребедени стараются избегать (позвольте вашему бойцу пару раз попасть в подобное неловкое положение и он лично спилит все выпирающие части на первом же привале ржавым напильником). 
 
-Действительно, сцепившиеся детали лат, или застрявший в кольчуге шип на наруче могут стоить жизни. Именно поэтому латы делают очень тщательно (и дорого), а шипов и прочей дребедени стараются избегать (позвольте вашему бойцу пару раз попасть в подобное неловкое положение и он лично спилит все выпирающие части на первом же привале ржавым напильником). С другой стороны — многие действия, для которых требуется тот самый «бонус ловкости» в доспехе просто невыполнимы:
+С другой стороны — многие действия, для которых требуется тот самый «бонус ловкости» в доспехе просто невыполнимы:
+- практически нереально сделать сальто в латах, потому что твое тело, став на 40-70кг тяжелее, стремится к земле с гораздо большей силой, да и латы не столь гибки для этого;
+- трудно вскрывать замок и обезвреживать ловушки, потому что перчатки мешают держать отмычки;
+- кираса не дает прильнуть ухом к скважине и вместе с налокотниками не дает выгибать тело и руки так, чтобы дотянуться до хитрых растяжек ловушки.
 
-практически нереально сделать сальто в латах, потому что твое тело, став на 40-70кг тяжелее, стремится к земле с гораздо большей силой, да и латы не столь гибки для этого;
-трудно вскрывать замок и обезвреживать ловушки, потому что перчатки мешают держать отмычки;
-кирасса не дает прильнуть ухом к скважине и вместе с налокотниками не дает выгибать тело и руки так, чтобы дотянуться до хитрых растяжек ловушки.
 Используйте здравый смысл, представьте и опишите игрокам все трудности ношения брони и многие вопросы отпадут сами собой. А может даже и приобретут новое значение.
 
 Я, например, не вижу почему кольчуга мешала бы рейнджеру махать двумя мечами? Железные наплечники — да, шлем — несомненно. Но кольчуга… Да позвольте ему это ради его богов, но сделайте двойной штраф на усталость, пусть игрок сам знает на что идет и выбирает Защита или Выносливость. Поверьте — он сам выберет кожанку, или решит иметь оба вида. Не ограничивая игроков жестко, позвольте им экспериментировать. Дайте им понять что эти ограничения не ваша выдумка, а жизненная ситуация.
 
 Но вернемся к штрафам. В АДнД 2, и прочих системах, где штрафы жесткие — все еще было не так плохо. И более ловкий боец превосходил менее ловкого в таком же доспехе. То есть разница в ловкости на что-то но влияла.
 
-С приходом АДнД3 штрафы стали глобальными и это портит все впечатление. «Каким бы ты ни был славным воином, но унифицированные латы ХЗЧ-3-АС-0 снизят твой бонус ловкости до 1!» Блеск!
+С приходом ДнД 3.0 штрафы стали глобальными и это портит все впечатление. «Каким бы ты ни был славным воином, но унифицированные латы ХЗЧ-3-АС-0 снизят твой бонус ловкости до 1!» Блеск!
 
 Подумайте сами:
 
