--- a/src/content/posts/articles/about-classes.mdx
+++ b/src/content/posts/articles/about-classes.mdx
@@ -7,10 +7,10 @@ tags:
   - Мысли вслух
 ---
 
-Варвар - нет "воинских" архетипов (кроме Берсерка и Battlerager), практически все новые архетипы являются магическими
+Варвар - нет "воинских" архетипов (кроме Берсерка и Бушующего в бою), практически все новые архетипы являются магическими
 
-Бард - стал еще одним полным спеллкастером основаным на Харизме и потерял свои уникальные особенности. Где его музыка?
+Бард - стал еще одним полным спеллкастером основанным на Харизме и потерял свои уникальные особенности. Где его музыка?
 
-Колдун - мощный кантрип Eldritch Blast приводит к уменьшению остальных его особенностей, в итоге имеем что по большей части колдун только и делает что "пиу-пиу" бластами.
+Колдун - мощный заговор Мистический заряд [Eldritch blast] приводит к уменьшению остальных его особенностей, в итоге имеем что по большей части колдун только и делает что "пиу-пиу" бластами.
 
 Решаемы ли эти проблемы? В целом да.
