--- a/src/content/posts/translations/alexandrian-dont-13.mdx
+++ b/src/content/posts/translations/alexandrian-dont-13.mdx
@@ -24,15 +24,15 @@ translator: Станислав "Drakzar" Иванов
 
 Конечно, преимущество текста в табличке в том, что он может быть заготовлен заранее: он может даже дать вам шанс аккуратно продумать и подобрать слова для лучшего эффекта. Если это важная информация, что должна быть передана игрокам, поместив ее в табличку, вы практически гарантировали, что случайно не пропустите ее на игре.
 
-Например, в The Art of the Key я рассуждаю о том, как эти свойства текста в табличке делают его идеальным для передачи игрокам того, что они видят при первом заходе в комнату или локацию, четко отделяя ту информацию, что они должны автоматически распознавать из легенды или сноски к карте (даже если вы не используете полноценный текст в табличке для подобного эффекта, вам все еще пргиодится какой-нибудь текст-не-в-табличке, который будет исполнять данную функцию).
+Например, в The Art of the Key я рассуждаю о том, как эти свойства текста в табличке делают его идеальным для передачи игрокам того, что они видят при первом заходе в комнату или локацию, четко отделяя ту информацию, что они должны автоматически распознавать из легенды или сноски к карте (даже если вы не используете полноценный текст в табличке для подобного эффекта, вам все еще пригодится какой-нибудь текст-не-в-табличке, который будет исполнять данную функцию).
 
 ## Но почему же вам не стоит использовать этот инструмент?
 
-· Аккуратный подбор слов времязатратен (что может стать причиной избавиться от него в соответствии с принципами умной подготовки);
++ Аккуратный подбор слов времязатратен (что может стать причиной избавиться от него в соответствии с принципами умной подготовки);
 
-· Результат в основе своей будет менее гибким (Например, если в комнате есть несколько входов, то текст в табличке должен быть достаточно общим, чтобы подойти любому из них. А еще добавьте мастерских персонажей, условия освещения и так далее);
++ Результат в основе своей будет менее гибким (Например, если в комнате есть несколько входов, то текст в табличке должен быть достаточно общим, чтобы подойти любому из них. А еще добавьте мастерских персонажей, условия освещения и так далее);
 
-· Зачитывание подготовленного текста аудитории – это отдельный вид искусства, который вполне может быть не очень комфортен для Дма (в таких случаях спонтанность и вовлеченность в импровизацию описания может быть гораздо лучше заторможенного или поспешного чтения вслух).
++ Зачитывание подготовленного текста аудитории – это отдельный вид искусства, который вполне может быть не очень комфортен для ДМа (в таких случаях спонтанность и вовлеченность в импровизацию описания может быть гораздо лучше заторможенного или поспешного чтения вслух).
 
 Если ведете опубликованное приключение с текстом в табличках и не хотите его использовать – по той или иной причине – вам может быть полезным выделение ключевых фактов этого самого текста, что быстро превратит его в не столь табличный:
 
