--- a/src/content/posts/articles/cityscape-prostoj-na-zametku-issledovatelyam.mdx
+++ b/src/content/posts/articles/cityscape-prostoj-na-zametku-issledovatelyam.mdx
@@ -53,7 +53,29 @@ tags:
 |                          | 15                 | Мудрецы выше плюс Плаутрус "Перо", Хрун Прочный Шаг                                                              |
 |                          | 20                 | Все выше и Чандра Проницательная                                                                                 |
 
-https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape19.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape20.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape21.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape22.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape23.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape24.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape25.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape26.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape27.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape28.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape29.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape30.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape31.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape32.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape33.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape34.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape35.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape36.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape37.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape38.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape39.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape40.pnghttps://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape41.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape19.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape20.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape21.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape22.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape23.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape24.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape25.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape26.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape27.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape28.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape29.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape30.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape31.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape32.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape33.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape34.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape35.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape36.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape37.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape38.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape39.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape40.png
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape41.png
 
 ## ПРИМЕРЫ МУДРЕЦОВ
 
@@ -69,9 +91,8 @@ https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape19.p
 
 **Бенсон Вердрум**: Знание (природа) +15. Фермеры часто платят ему за его предсказания погоды. Оплата: 4 зм за обычную консультацию плюс 50 зм за каждый день, потраченный на исследования.
 
-```
-    <strong>Беншастра Ткачиха</strong>. Знание (магия) +25, Знание (планы) +20, Знание (религия) +15. Могущественная Повелительница Знаний, живущая в своей собственной башне. Оплата: 500 зм за  обычную консультацию плюс 200 зм за каждый день, потраченный на исследования.
-```
+
+**Беншастра Ткачиха**. Знание (магия) +25, Знание (планы) +20, Знание (религия) +15. Могущественная Повелительница Знаний, живущая в своей собственной башне. Оплата: 500 зм за  обычную консультацию плюс 200 зм за каждый день, потраченный на исследования.
 
 **Дарнек Каменный Молот**: Знание (архитектура и инженерия) +15. Шахтёр-дварф с великолепной репутацией. Оплата: 3 зм за обычную консультацию плюс 50 зм за каждый день, потраченный на исследования.
 
@@ -119,4 +140,6 @@ https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape19.p
 
 **Чандра Проницательная**: Знание (религия) +25. Советник по религиоведению, значимая фигура в разных религиях. Оплата: 500 зм за обычную консультацию плюс 200 зм за каждый день, потраченный на исследования.
 
-**Яруш Юный**: Знание (история) +20, Знание (знать и королевский двор) +15. Официальный судебный историк, проводящий независимые консультации на стороне. Оплата: 300 зм за обычную https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape42.pngконсультацию плюс 100 зм за каждый день, потраченный на исследования.
+**Яруш Юный**: Знание (история) +20, Знание (знать и королевский двор) +15. Официальный судебный историк, проводящий независимые консультации на стороне. Оплата: 300 зм за обычную консультацию плюс 100 зм за каждый день, потраченный на исследования.
+
+https://cyborgsandmages.com/wp-content/uploads/2023/02/021123_1456_cityscape42.png 
